# columngenerationsolverpy

./: README.md  setup.cfg
columngenerationsolverpy/: __init__.py  branching_scheme.py  column_generation.py  commons.py
examples/: cuttingstock.py
