[metadata]
name = columngenerationsolverpy
version = 0.0.7
author = Florian Fontan
author_email = dev@florian-fontan.fr
description = A solver based on Column Generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fontanf/columngenerationsolverpy
project_urls =
    Bug Tracker = https://github.com/fontanf/columngenerationsolverpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    sortedcontainers
    pulp
    treesearchsolverpy>=0.0.5
python_requires = >=3.6
